# interpretForthLike

./: CMakeLists.txt  README.md  command.cpp  command.h  context.h  file.txt  int_stack.h  interpreter.cpp  interpreter.h  interpreter_error.h  main.cpp  test.cpp
